--- a/app/views/rooms/edit.html.erb
+++ b/app/views/rooms/edit.html.erb
@@ -14,13 +14,49 @@
   <body>
   	<%= render 'navbar' %>
     <div class="page-content">
-    	<div class="row">
-		  <%= render 'menu' %>
-		  <div class="col-md-10">
-	        <%= render 'form' %>
-	        <hr>
-		  </div>
-		</div>
+      <div class="row">
+        <%= render 'menu' %>
+        <div class="col-md-10">
+          <div class="page-content container">
+            <div class="row">
+              <div class="col-md-4 col-md-offset-4">
+                <div class="login-wrapper">
+                  <div class="box">
+                    <div class="content-wrap">
+                      <%= bootstrap_form_for(@room) do |f| %>
+                          <% if @room.errors.any? %>
+                              <div id="error_explanation">
+                                <h2><%= pluralize(@room.errors.count, "error") %> prohibited
+                                  this room from being saved:</h2>
+                                <ul>
+                                  <% @room.errors.full_messages.each do |msg| %>
+                                      <li><%= msg %></li>
+                                  <% end %>
+                                </ul>
+                              </div>
+                          <% end %>
+                          <p>
+                            <%= f.text_field :number, class: "form-control" %>
+                          </p>
+                          <p>
+                            <%= f.text_area :size, class: "form-control" %>
+                          </p>
+                          <p>
+                            <%= f.text_area :building, class: "form-control" %>
+                          </p>
+                          <p>
+                            <%= f.text_area :admin, class: "form-control" %>
+                          </p>
+                          <%= f.submit "Submit", class: "btn btn-primary" %>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 	<%= render 'footer' %>
   </body>
