--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -3,13 +3,7 @@
   <head>
     <title>Room App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+
   </head>
   <body>
   	<%= render 'navbar' %>
@@ -21,7 +15,7 @@
 
   			<div class="content-box-large">
   				<div class="panel-heading">
-					<div class="panel-title">Members table</div>
+					<div class="panel-title">Rooms</div>
 					<div class="panel-options">
 						<a class="btn btn-primary btn-sm" href="<%= new_room_path %>" role="button">Create new room</a>
 					</div>
@@ -45,8 +39,7 @@
 									<td><%= room.size %></td>
 									<td><% if room.building == 0 %> D.H.Hill <% else %> James.B.Hunt <% end %></td>
 									<td><% if room.status == 0 %> Default <% else %> Deleted <% end %></td>
-									<td><%= link_to 'Show', room_path(room) %></td>
-									<td><%= link_to 'Edit', edit_room_path(room) %></td>
+									<td><%= link_to 'Show & Edit', edit_room_path(room) %></td>
 									<td><%= link_to 'Delete', room_path(room), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 								</tr>
 							<% end %>
