--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -3,72 +3,36 @@
   <head>
     <title>Room App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body>
   	<%= render 'navbar' %>
-
     <div class="page-content">
     	<div class="row">
 		  <%= render 'menu' %>
-		  <div class="col-md-10">
-		  	<div class="row">
-		  		<div class="col-md-6 panel-warning">
-		  			<div class="content-box-header panel-heading">
-			  			<div class="panel-title">Administrator Rules</div>
-				  	</div>
-		  			<div class="content-box-large box-with-header">
-		  				<div class="panel-body">
-		  					The role of administrator involves a great deal of multitasking. You will work with teams, oversee the operations within your company, manage groups, coordinate with management and engage in planning according to the needs of your company. If there are office resource or administrative issues, you will be the person expected to deal with them.
-				  			<br /><br />
-				  			The community is a big family, every administrator must follow the administration rule for the Room App management department. If you are still not familiar of what the rule is for being a administratior, click the link below and see what we defined for our rule.
-				  			<br /><br />
-							<p><a class="btn btn-primary btn-lg" href="http://www.merriam-webster.com/dictionary/rule" role="button">Administration Rules</a></p>
-		  				</div>
-		  			</div>
-		  		</div>
-
-		  		<div class="col-md-6">
-		  			<div class="row">
-		  				<div class="col-md-12">
-		  					<div class="content-box-header">
-			  					<div class="panel-title">Latest News </div>
-				  			</div>
-				  			<div class="content-box-large box-with-header">
-					  			"Experiencing King” weekend features unique performances and exhibits"
-					  			<br /><br />
-					  			The NCSU Libraries is proud to be a presenting partner in “Experiencing King at NC State University,” a campus-wide weekend of public events and exhibits, September 16-17.
-								<br /><br />
-								<p><a class="btn btn-primary btn-sm" href="http://www.lib.ncsu.edu/news/%E2%80%9Cexperiencing-king%E2%80%9D-weekend-features-unique-performances-and-exhibits" role="button">See</a></p>
-							</div>
-		  				</div>
-		  			</div>
-		  			<div class="row">
-		  				<div class="col-md-12">
-		  					<div class="content-box-header">
-			  					<div class="panel-title">Room App Broadcast</div>
-				  			</div>
-				  			<div class="content-box-large box-with-header">
-				  				"MilkShake" has just been promoted to administrator by supervisor "Admin".
-				  				<br /><br />
-					  			- 2016/9/18
-					  			<br /><br />
-					  			"Admin" has set the status of room 3271 into "Busy"
-					  			<br /><br />
-					  			-2016/8/15 
-							</div>
-		  				</div>
-		  			</div>
-		  		</div>
-		  	</div>
+        <div class="col-md-10">
+          <div class="row">
+            <div class="col-md-6 panel-warning">
+              <div class="content-box-header panel-heading">
+                <div class="panel-title">Administrator Rules</div>
+              </div>
+              <div class="content-box-large box-with-header">
+                <div class="panel-body">
+                  The NCSU exists for the purpose of public education. The School is a private institution and retains the right to revoke the permission of people to enter and use the estate if they are engaging in behaviour that is criminal, prejudices public safety, breaches the School’s rules and procedures or diminishes or disrupts the experience of students through the misuse of School facilities.
+                  <br><br>
+                  The Library is open for the purpose of study and research to current members of the School and other groups and individuals according to the Library's admissions policy.
+                  <br><br>
+                  All users must possess a current Library card and show it on request to Library staff and Security. Library users are responsible for the use of their Library card and should not allow others to use it. Users who are found to have allowed entry to unauthorised people will be subject to disciplinary procedures (see Enforcement below).
+                  <br><br>
+                  Applicants for a Library card will be required to provide evidence of identification and status. See the Membership pages for full admissions policy details.
+                  Children under 12 are not allowed beyond the Library entrance turnstiles.
+                  <br><br>
+                <p><a class="btn btn-primary btn-lg" href="http://www.merriam-webster.com/dictionary/rule" role="button">Administration Rules</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+		    </div>
 		  </div>
-		</div>
     </div>
    <%= render 'footer' %>
   </body>
