--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -55,7 +55,7 @@
 	                    <div class="caption">
 	                        <h3>James B.Hunt Jr.Library</h3>
 	                        <p>
-	                            <a href="#" class="btn btn-primary">Reserve Study Rooms</a>
+	                            <a href="schedules" class="btn btn-primary">Reserve Study Rooms</a>
 	                        </p>
 	                    </div>
 	                </div>
@@ -67,7 +67,7 @@
 	                    <div class="caption">
 	                        <h3>D.H.Hill Library</h3>
 	                        <p>
-	                            <a href="#" class="btn btn-primary">Reserve Study Rooms</a>
+	                            <a href="schedules" class="btn btn-primary">Reserve Study Rooms</a>
 	                        </p>
 	                    </div>
 	                </div>
