--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -10,7 +10,7 @@
 	           <div class="col-md-12">
 	              <!-- Logo -->
 	              <div class="logo">
-	                 <h1><a href="/">Room App</a></h1>
+	                 <h1><a href="/members">Room App</a></h1>
 	              </div>
 	           </div>
 	        </div>
