--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -36,7 +36,13 @@
 							<% @rooms.each do |room| %>
 								<tr>
 									<td><%= room.number %></td>
-									<td><%= room.size %></td>
+                  <% if room.size == 0 %>
+                      <td>Small</td>
+                  <% elsif room.size == 1 %>
+                      <td>Medium</td>
+                  <% else %>
+                      <td>Large</td>
+                  <% end %>
 									<td><% if room.building == 0 %> D.H.Hill <% else %> James.B.Hunt <% end %></td>
 									<td><% if room.status == 0 %> Default <% else %> Deleted <% end %></td>
 									<td><%= link_to 'Show & Edit', edit_room_path(room) %></td>
