--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -12,7 +12,7 @@
       <div class="col-md-5">
         <!-- Logo -->
         <div class="logo">
-          <h1><a href="/">Room App</a></h1>
+          <h1><a href="/members">Room App</a></h1>
         </div>
       </div>
       <div class="col-md-5">
