--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -33,17 +33,7 @@
 
 <div class="page-content">
   <div class="row">
-    <div class="col-md-2">
-      <div class="sidebar content-box" style="display: block;">
-        <ul class="nav">
-          <!-- Main menu -->
-          <li><a href="<%= edit_member_path(current_member) %>"><i class="glyphicon glyphicon-cog"></i> Profile </a></li>
-          <li><a href="/schedules"><i class="glyphicon glyphicon-calendar"></i> Reservation </a></li>
-          <li><a href="<%=schedules_history_path%>"><i class="glyphicon glyphicon-list"></i> History </a></li>
-          <li><a href="/members/logout"><i class="glyphicon glyphicon-hand-right"></i> Logout </a></li>
-        </ul>
-      </div>
-    </div>
+    <%= render 'member_menu' %>
     <div class="col-md-10">
       <div>
         <h3>
