admin creates member function

--- a/app/views/admins/show_members.html.erb
+++ b/app/views/admins/show_members.html.erb
@@ -15,6 +15,9 @@
   			<div class="content-box-large">
   				<div class="panel-heading">
 					<div class="panel-title">Members</div>
+          <div class="panel-options">
+            <a class="btn btn-primary btn-sm" href="/admins/member/new" role="button">Create Member</a>
+          </div>
 				</div>
   				<div class="panel-body">
   					<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
