--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -3,12 +3,6 @@
   <head>
     <title>Room App</title>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body class="login-bg">
   	<div class="header">
@@ -17,7 +11,7 @@
 	           <div class="col-md-12">
 	              <!-- Logo -->
 	              <div class="logo">
-	                 <h1><a href="index.html">Room App</a></h1>
+	                 <h1><a href="/admins">Room App</a></h1>
 	              </div>
 	           </div>
 	        </div>
