--- a/app/views/admins/members_history.html.erb
+++ b/app/views/admins/members_history.html.erb
@@ -6,34 +6,11 @@
 
 </head>
 <body>
-<div class="header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5">
-        <!-- Logo -->
-        <div class="logo">
-          <h1><a href="/members">Room App</a></h1>
-        </div>
-      </div>
-      <div class="col-md-5">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="input-group form">
-              <input type="text" class="form-control" placeholder="Search...">
-              <span class="input-group-btn">
-               <button class="btn btn-primary" type="button">Search</button>
-             </span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render 'navbar' %>
 
 <div class="page-content">
   <div class="row">
-    <%= render 'member_menu' %>
+    <%= render 'menu' %>
     <div class="col-md-10">
 
       <!-- Page Features -->
@@ -72,11 +49,11 @@
                 <td><%= schedule.start_at %></td>
                 <td><%= schedule.end_at %></td>
                 <% if schedule.status == 0 && (schedule.start_at > Time.new || (schedule.end_at > Time.new && schedule.start_at < Time.new)) %>
-                  <td><%= link_to 'Release', schedule_path(schedule), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                    <td><%= link_to 'Release', schedule_path(schedule), method: :delete, data: { confirm: 'Are you sure?' } %></td>
                 <% elsif schedule.status == 1 %>
-                  <td>Released</td>
+                    <td>Released</td>
                 <% elsif schedule.end_at < Time.new %>
-                  <td>Used</td>
+                    <td>Used</td>
                 <% end %>
               </tr>
           <% end %>
@@ -87,19 +64,9 @@
 
       <!-- /.row -->
 
-      <hr>
-
     </div>
   </div>
 </div>
-
-<footer class="navbar-fixed-bottom">
-  <div class="container">
-    <div class="copy text-center">
-      Library Reservation System
-    </div>
-  </div>
-</footer>
-
+<%= render 'footer' %>
 </body>
 </html>
