--- a/app/views/admins/show_members.html.erb
+++ b/app/views/admins/show_members.html.erb
@@ -26,7 +26,7 @@
 								<th>Email</th>
     							<th>Name</th>
     							<th>Status</th>
-   								<th colspan="2"></th>
+   								<th colspan="3"></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -35,7 +35,8 @@
 						        <td><%= member.email %></td>
 						        <td><%= member.name %></td>
 						        <td><% if member.status == 0 %> Default <% else %> Deleted <% end %></td>
-						        <td><%= link_to 'Show', "/admins/members/profile?member_id=#{member.id}" %></td>
+						        <td><%= link_to 'Show', "/admins/member/profile?member_id=#{member.id}" %></td>
+                    <td><%= link_to 'History', "/admins/member/history?member_id=#{member.id}" %></td>
 						        <td><%= link_to 'Delete', member_path(member), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 						      </tr>
 							<% end %>
