--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -18,7 +18,7 @@
                 <div class="login-wrapper">
                   <div class="box">
                     <div class="content-wrap">
-
+                      <h6>Show and edit admin profile</h6>
                       <% if @admin.errors.any? %>
                           <ul>
                             <% @admin.errors.full_messages.each do |msg| %>
@@ -40,7 +40,7 @@
             </div>
           </div>
         </div>
-		</div>
+		  </div>
     </div>
 	<%= render 'footer' %>
   </body>
