--- a/app/views/admins/members_profile.html.erb
+++ b/app/views/admins/members_profile.html.erb
@@ -18,7 +18,7 @@
             <div class="login-wrapper">
               <div class="box">
                 <div class="content-wrap">
-
+                  <h6>Member profile</h6>
                   <% if @member.errors.any? %>
                       <ul>
                         <% @member.errors.full_messages.each do |msg| %>
