--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Room App</title>
-
   </head>
+
   <body class="login-bg">
   	<div class="header">
 	     <div class="container">
@@ -16,50 +16,42 @@
 	           </div>
 	        </div>
 	     </div>
-	</div>
+	  </div>
 
-	<div class="page-content container">
-		<div class="row">
-			<div class="col-md-4 col-md-offset-4">
-				<div class="login-wrapper">
-			        <div class="box">
-			            <div class="content-wrap">
-			                <h6>Create a new Admin</h6>
-
-                      <%= bootstrap_form_for(@admin) do |f| %>
-                        <% if @admin.errors.any? %>
-                            <div id="error_explanation">
-                              <h6><%= pluralize(@admin.errors.count, "error") %> prohibited
-                                this admin from being saved:</h6>
-                              <ul>
-                                <% @admin.errors.full_messages.each do |msg| %>
-                                    <li><%= msg %></li>
-                                <% end %>
-                              </ul>
-                            </div>
-                        <% end %>
-                        <p>
-                          <%= f.text_field :name, placeholder: 'Admin Name' %>
-                        </p>
-
-                        <p>
-                          <%= f.text_field :email, placeholder: 'E-mail address' %>
-                        </p>
-
-                        <p>
-                          <%= f.password_field :password, placeholder: 'Password' %>
-                        </p>
-
-                        <p>
-                         <%= f.submit "Submit", class: "btn btn-primary" %>
-                        </p>
+    <div class="page-content">
+      <div class="row">
+        <%= render 'menu' %>
+        <div class="col-md-10">
+          <div class="page-content container">
+            <div class="row">
+              <div class="col-md-4 col-md-offset-4">
+                <div class="login-wrapper">
+                  <div class="box">
+                    <div class="content-wrap">
+                      <h6>Create a new Admin</h6>
+                      <% if @admin.errors.any? %>
+                          <ul>
+                            <% @admin.errors.full_messages.each do |msg| %>
+                                <li><h1><%= msg %></h1></li>
+                            <% end %>
+                          </ul>
                       <% end %>
-			            </div>
-			        </div>
+                      <%= bootstrap_form_for(@admin) do |f| %>
+                          <%= f.text_field :name %>
+                          <%= f.email_field :email %>
+                          <%= f.password_field :password %>
+                          <%= f.submit "Create" %>
+                      <% end %>
 
-			    </div>
-			</div>
-		</div>
-	</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <%= render 'footer' %>
   </body>
 </html>
