--- a/app/views/admins/new_member.html.erb
+++ b/app/views/admins/new_member.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Room App</title>
-
 </head>
+
 <body class="login-bg">
 <div class="header">
   <div class="container">
@@ -18,37 +18,45 @@
   </div>
 </div>
 
-<div class="page-content container">
+<div class="page-content">
   <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-      <div class="login-wrapper">
-        <div class="box">
-          <div class="content-wrap">
-            <h6>Create a new Member</h6>
+    <%= render 'menu' %>
+    <div class="col-md-10">
+      <div class="page-content container">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4">
+            <div class="login-wrapper">
+              <div class="box">
+                <div class="content-wrap">
+                  <h6>Create a new Member</h6>
 
-            <%= bootstrap_form_tag url: '/admins/member/create' do |f| %>
-                <% if @member.errors.any? %>
-                    <div id="error_explanation">
-                      <h6><%= pluralize(@member.errors.count, "error") %> prohibited
-                        this member from being saved:</h6>
-                      <ul>
-                        <% @member.errors.full_messages.each do |msg| %>
-                            <li><%= msg %></li>
-                        <% end %>
-                      </ul>
-                    </div>
-                <% end %>
-                <%= f.text_field :name %>
-                <%= f.email_field :email %>
-                <%= f.password_field :password %>
-                <%= f.submit "Create", class: "btn btn-primary" %>
-            <% end %>
+                  <%= bootstrap_form_tag url: '/admins/member/create' do |f| %>
+                      <% if @member.errors.any? %>
+                          <div id="error_explanation">
+                            <h6><%= pluralize(@member.errors.count, "error") %> prohibited
+                              this member from being saved:</h6>
+                            <ul>
+                              <% @member.errors.full_messages.each do |msg| %>
+                                  <li><%= msg %></li>
+                              <% end %>
+                            </ul>
+                          </div>
+                      <% end %>
+                      <%= f.text_field :name %>
+                      <%= f.email_field :email %>
+                      <%= f.password_field :password %>
+                      <%= f.submit "Create", class: "btn btn-primary" %>
+                  <% end %>
+
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
 </div>
+<%= render 'footer' %>
 </body>
 </html>
