--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -28,8 +28,7 @@
 							    <th>Size</th>
 							    <th>Building</th>
 							    <th>Status</th>
-							    <th>Admin</th>
-							    <th colspan="2"></th>
+							    <th colspan="3"></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -46,6 +45,7 @@
 									<td><% if room.building == 0 %> D.H.Hill <% else %> James.B.Hunt <% end %></td>
 									<td><% if room.status == 0 %> Default <% else %> Deleted <% end %></td>
 									<td><%= link_to 'Show & Edit', edit_room_path(room) %></td>
+                  <td><%= link_to 'History', "/rooms/history?room_number=#{room.number}" %></td>
 									<td><%= link_to 'Delete', room_path(room), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 								</tr>
 							<% end %>
