--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -41,7 +41,7 @@
               <div class="login-wrapper">
                 <div class="box">
                   <div class="content-wrap">
-
+                    <h6> Show and Eidt member profile</h6>
                     <% if @member.errors.any? %>
                         <ul>
                           <% @member.errors.full_messages.each do |msg| %>
