--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -42,6 +42,10 @@
           <% end -%>
         </h3>
       </div>
+      <h3>Current Schedule Table is based on:</h3>
+      <h6><br></h6>
+      <h3> <%= " Date => #{@date.to_date}, Building => #{@building}, Size => #{@size}" %> </h3>
+      <br>
       <!-- Page Features -->
       <div class="row text-center">
         <%= bootstrap_form_tag method: 'get', url: '/schedules' do |f| %>
@@ -61,7 +65,6 @@
               <%= f.submit "Search", class: "btn btn-success btn-lg"%>
             </div>
         <% end %>
-
         <table class="table table-striped table-bordered table-hover">
           <thead>
             <tr>
@@ -82,6 +85,7 @@
               <th>21:00-22:00</th>
             </tr>
           </thead>
+
           <tbody>
             <% @table_schedules.each do |room_number, schedules| %>
               <tr>
